Make sure all the touch events during an active fling are uncancelable

After we enabled the fling intervention, all the touch events during an active fling should be uncancelable,
but now they are still cancelable. The reason is the layer returned by FindLayerThatIsHitByPointInTouchHandlerRegion
does not match with the current scrolling layer even we scroll on the same layer. So, we use FindLayerThatIsHitByPoint
to return the layer the touch start hits on and compare with the current scrolling layer.

BUG=700465

Review-Url: https://codereview.chromium.org/2759523002
Cr-Commit-Position: refs/heads/master@{#460415}

Former-commit-id: 9327ce925b77f722c31116f5e08cff23df70908d